# rust-shortlink

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  build.sh  index.html  package.json
.github/workflows/: rust.yml
migrations/2022-06-04-094227_create_table/: down.sql  up.sql
migrations/2022-06-17-082930_alter_shortlink_table/: down.sql  up.sql
migrations/2025-03-17-184630_create_tables/: down.sql  up.sql
src/: app.rs  forms.rs  lib.rs  main.rs  prelude.rs  utils.rs
src/api/: errors.rs  mod.rs  prelude.rs  routes.rs  utils.rs
src/api/dto/: auth_dto.rs  mod.rs  shortlink_dto.rs
src/api/handlers/: auth_handler.rs  mod.rs  shortlink_handler.rs  user_handler.rs
src/api/models/: auth_model.rs  mod.rs  shortlink_model.rs  user_model.rs
src/api/services/: auth_service.rs  mod.rs  shortlink_service.rs  user_service.rs
src/auth/: handlers.rs  routes.rs
src/components/: guard.rs  mod.rs  navbar.rs
src/database/: mod.rs  models.rs  schema.rs  utils.rs
src/errors/: app.rs  auth.rs  mod.rs  shortlink.rs
src/forms/: mod.rs
src/functions/: auth.rs  mod.rs  short.rs
src/handlers/: auth_handlers.rs  mod.rs  shortlink_handler.rs  user_handlers.rs
src/home/: handlers.rs  routes.rs
src/middlewares/: auth.rs  mod.rs
src/models/: auth.rs  mod.rs  short_link.rs  url.rs  user.rs
src/pages/: mod.rs
src/pages/auth/: login.rs  register.rs
src/pages/home/: home.rs
src/pages/users/: profile.rs
src/routes/: auth.rs  home.rs  mod.rs  user.rs
src/services/: auth.rs  mod.rs  short_link.rs  user.rs
src/users/: handlers.rs  routes.rs
style/: input.css  output.css
templates/: generate.html  index.html  login.html  profile.html  register.html
templates/components/: _base.html  footer.html  navbar.html
tests/: .gitignore  base62_test.rs  environment_test.rs  home_test.rs  service_tests.rs
