[package]
name = "shortlink"
version = "0.1.0"
edition = "2021"
authors = ["Sugi <sugidaffection@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "shortlink"
path = "src/main.rs"

[lib]
name = "shortlink"
path = "src/lib.rs"

[dependencies]
actix-web = "4.10.2"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.2.8", features = [
    "postgres",
    "chrono",
    "uuid",
    "r2d2",
] }
diesel_migrations = "2.2.0"
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
tera = "1.20.0"
secrecy = { version = "0.10.3", features = ["serde"] }
bcrypt = "0.17.0"
thiserror = "2.0.12"
dotenvy = "0.15.7"

[dev-dependencies]
lazy_static = "1.4.0"
serial_test = "3.2.0"
