[package]
name = "shortlink"
version = "0.1.0"
edition = "2021"
authors = ["Sugi <sugidaffection@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6.6", optional = true }
actix-web = { version = "4.10.2", optional = true, features = ["macros"] }
actix-session = { version = "0.10.1", optional = true, features = [
    "cookie-session",
] }
serde = { version = "1.0", optional = true, features = ["derive"] }
diesel = { version = "2.2.8", optional = true, features = [
    "postgres",
    "chrono",
    "uuid",
    "r2d2",
] }
diesel_migrations = { version = "2.2.0", optional = true }
chrono = { version = "0.4.40", optional = true, features = ["serde"] }
uuid = { version = "1.16.0", optional = true, features = ["serde", "v4"] }
secrecy = { version = "0.10.3", optional = true, features = ["serde"] }
bcrypt = { version = "0.17.0", optional = true }
thiserror = { version = "2.0.12", optional = true }
dotenvy = { version = "0.15.7", optional = true }
serde_json = { version = "1.0.140", optional = true }
leptos = { version = "0.7.7" }
leptos_actix = { version = "0.7.7", optional = true }
leptos_router = { version = "0.7.7" }
leptos_meta = { version = "0.7.7" }
http = { version = "1.3.1", optional = true }
wasm-bindgen = "=0.2.100"
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.77", optional = true, features = [
    "Clipboard",
    "Navigator",
] }

[dev-dependencies]
# lazy_static = "1.4.0"
# serial_test = "3.2.0"

[features]
csr = ["leptos/csr", "dep:web-sys"]
hydrate = ["leptos/hydrate", "dep:web-sys"]
ssr = [
    "dep:uuid",
    "dep:bcrypt",
    "dep:diesel",
    "dep:diesel_migrations",
    "dep:serde",
    "dep:serde_json",
    "dep:dotenvy",
    "dep:thiserror",
    "dep:chrono",
    "dep:secrecy",
    "dep:actix-session",
    "dep:actix-files",
    "dep:actix-web",
    "dep:leptos_actix",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]
backend = [
    "dep:uuid",
    "dep:bcrypt",
    "dep:diesel",
    "dep:diesel_migrations",
    "dep:serde",
    "dep:serde_json",
    "dep:dotenvy",
    "dep:thiserror",
    "dep:chrono",
    "dep:secrecy",
    "dep:actix-session",
    "dep:actix-files",
    "dep:actix-web",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "shortlink"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

tailwind-input-file = "style/input.css"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
# style-file = "style/input.css"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "assets"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
# end2end-cmd = "npx playwright test"
# end2end-dir = "end2end"
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
